--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,15 @@ dependencies:
   firebase_core: ^0.4.3+1
   firebase_auth: ^0.15.2
   firebase_messaging: ^6.0.9
-  firebase_database: ^3.1.1
+#  firebase_database: ^3.1.1
   provider: ^3.2.0
   get_it: ^3.0.3
   splashscreen: ^1.2.0
   shared_preferences: ^0.5.6
   toast: ^0.1.5
+  flutter_exoplayer: ^0.5.4
+  flutter_screenutil: ^1.0.1
+  cloud_firestore: ^0.13.0+1
 
 
 dev_dependencies:
